# Next-Phi-Backend

./: .gitignore  AGENTS.md  API_USAGE.md  CLAUDE.md  Cargo.toml  GRACEFUL_SHUTDOWN.md  STATS.md  Service.py  bn_user_example.json  config.example.toml  config.toml  handler_tmp_view.txt  openapi.json  run_auth_flow.py  text.md  text.py  verification.md
.claude/: settings.local.json
.github/: cliff.toml
.github/workflows/: build.yml  build_and_deploy.yml  ci.yml  release.yml
crates/phi-save-codec/: Cargo.toml
crates/phi-save-codec/src/: error.rs  game_key.rs  game_progress.rs  game_record.rs  lib.rs  reader.rs  settings.rs  summary.rs  types.rs  user.rs
docs/: DEPLOYMENT.md  FUTURE_EVOLUTION.md  LEADERBOARD.md  LEADERBOARD_API.md  LEADERBOARD_CHANGES.md  image-format.md  save_inspect.md  sdk-ts.md  sdk-usage.md  svg-template-design-guide.md  svg-template.md  webp_support.md
examples/: dump_openapi.rs  stats_archive_reconcile.rs
info/: difficulty.csv  info.csv  single.txt
resources/templates/image/: README.md
resources/templates/image/bn/: default.json  default.svg.jinja  firstlook.json  firstlook.svg.jinja  neo.json  neo.svg.jinja
scripts/: check-stage2-feature-boundary.ps1  check-stage2-no-cross-feature.ps1
sdk/ts/: .gitignore  README.md  package.json  pnpm-lock.yaml
sdk/ts/src/: index.ts
src/: auth_qrcode_api.rs  auth_services.rs  config.rs  cors.rs  error.rs  http.rs  identity_hash.rs  leaderboard_api.rs  lib.rs  main.rs  openapi.rs  request_id.rs  rks_api.rs  router.rs  save_api.rs  save_contract.rs  session_auth.rs  shutdown.rs  state.rs  stats_contract.rs  watchdog.rs
src/api/: image_api.rs  song_api.rs
src/contracts/: auth_contract.rs  leaderboard_contract.rs  rks_contract.rs  save_contract.rs  song_contract.rs  stats_contract.rs
src/features/: mod.rs
src/features/auth/: bearer.rs  client.rs  handler.rs  mod.rs  models.rs  qrcode_service.rs
src/features/health/: handler.rs
src/features/image/: cover_loader.rs  handler.rs  mod.rs  renderer.rs  service.rs  signing.rs  types.rs
src/features/leaderboard/: handler.rs  mod.rs  models.rs
src/features/open_platform/: auth.rs  keys.rs  mod.rs  open_api.rs  storage.rs  token_auth.rs
src/features/rks/: engine.rs  handler.rs
src/features/save/: client.rs  decryptor.rs  handler.rs  inspector.rs  mod.rs  models.rs  parser.rs  provider.rs  record_parser.rs  summary_parser.rs
src/features/song/: handler.rs  mod.rs  models.rs
src/features/stats/: archive.rs  handler.rs  middleware.rs  mod.rs  models.rs  storage.rs
src/startup/: chart_loader.rs  checks.rs  mod.rs  remote_info.rs  song_loader.rs  startup.rs
tests/: .gitignore  README.md  api_contract_v2.rs  auth_contract_v2.rs  b27_performance_test.rs  bearer_auth_integration.rs  cors_layer.rs  example_run.ps1  example_run.sh  leaderboard_storage.rs  leaderboard_top_endpoint.rs  request_id_integration.rs  song_search_controls.rs
(+199 files in other folders)
