[package]
name = "phi-backend"
version = "0.1.0"
edition = "2024"

[dependencies]
# 核心异步与服务框架
tokio = { version = "1.41", features = ["full"] }
axum = "0.7.9"
tower-http = { version = "0.6", features = ["fs", "compression-br", "compression-gzip", "cors"] }

# 序列化与JSON
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
minijinja = { version = "2.14", features = ["loader"] }
unicode-width = "0.2"

# 错误处理与日志
thiserror = "2.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# 网络请求与加密工具
reqwest = { version = "0.12", features = ["stream", "json"] }
aes = "0.8"
cbc = "0.1"
cipher = "0.4"
aes-gcm = "0.10"
pbkdf2 = "0.12"
hmac = "0.12"
sha1 = "0.10"
sha2 = "0.10"
digest = "0.10"
jsonwebtoken = "9.3"
zip = "2.2"
flate2 = "1.0"
base64 = "0.22"
hex = "0.4"
csv = "1.3"
serde_yaml = "0.9"
rand = "0.8"
moka = { version = "0.12", features = ["future"] }
qrcode = "0.14"
uuid = { version = "1", features = ["v4", "fast-rng"] }
gethostname = "0.4"

# SQLite 持久化
sqlx = { version = "0.8.6", default-features = false, features = ["runtime-tokio", "sqlite", "macros", "chrono", "json"] }

# Parquet 导出
parquet = { version = "53", features = ["arrow"] }
arrow-array = "53"
arrow-schema = "53"
arrow-buffer = "53"

# OpenAPI 支持
utoipa = { version = "5.2", features = ["axum_extras"] }
utoipa-swagger-ui = { version = "8.0", features = ["axum"] }

# 配置文件支持
config = "0.14"
toml = "0.8"
once_cell = "1.20"

# Git 操作
git2 = { version = "0.19", features = ["vendored-openssl"] }

# 时间与日期
chrono = { version = "0.4", features = ["serde"] }
chrono-tz = "0.9"

# SVG 渲染为 PNG
resvg = "0.43"
tiny-skia = { version = "0.11", features = ["png"] }
png = "0.17"
image = { version = "0.25", features = ["webp"] }
webp = "0.3.1"
lru = "0.12"
num_cpus = "1.16"

[features]
webp = []

# systemd 支持（仅在Linux下生效）
[target.'cfg(target_os = "linux")'.dependencies]
sd-notify = "0.4"

[dev-dependencies]
tower = { version = "0.5.2", features = ["util"] }

[target.'cfg(unix)'.dev-dependencies]
pprof = { version = "0.14", features = ["flamegraph", "criterion"] }

# 发布产物瘦身（主要针对 linux-musl 静态链接二进制体积）
#
# 使用方式：
# - `cargo build --profile release-dist --target x86_64-unknown-linux-musl`
#
# 说明：
# - `strip="symbols"` 会显著减小体积，但会削弱 backtrace/符号诊断能力；
# - `opt-level="z"` 更偏向体积优化，CPU 开销可能略增。
[profile.release-dist]
inherits = "release"
strip = "symbols"
lto = "thin"
codegen-units = 1
opt-level = "z"
