[package]
name = "phi-save-codec"
version = "0.1.0"
edition = "2024"
description = "Phigros Cloud Save binary format codec (no_std compatible)"

[lib]
crate-type = ["rlib"]

[dependencies]
serde = { version = "1", default-features = false, features = ["derive", "alloc"] }
serde_json = { version = "1", default-features = false, features = ["alloc"] }
base64 = "0.22"
